Cadastrando música e listando

--- a/public/projetoangular/templates/novamusica.html
+++ b/public/projetoangular/templates/novamusica.html
@@ -51,22 +51,12 @@
                 </div>
                 <div class="form-group">
                     <div class="col-xs-12">
-                        <input type="url" ng-model="item.stTom" class="form-control" id="tomMusica" placeholder="Tom">
+                        <input type="text" ng-model="item.stTom" class="form-control" id="tomMusica" placeholder="Tom">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-xs-12">
                         <input type="text" ng-model="item.stTempoDuracao" class="form-control" id="tempoDuracaoMusica" placeholder="Duração">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-xs-12">
-                        <label class="control-label">Instrumentos</label>
-                        <ul>
-                            <li>Violão</li>
-                            <li>Guitarra</li>
-                            <li>Bateria</li>
-                        </ul>
                     </div>
                 </div>
                 <div class="form-group">
