--- a/public/projetoangular/templates/musica.html
+++ b/public/projetoangular/templates/musica.html
@@ -8,24 +8,29 @@
                 </a>
             </h3>
         </div>
+        <!--{{registros}}-->
         <div class="panel-body">
             <table class="table"> 
                 <thead> 
                     <tr> 
                         <th>#</th> 
                         <th>Música</th> 
+                        <th>Link para cifra</th> 
+                        <th>Tom</th> 
                         <th>Ação</th> 
                     </tr> 
                 </thead> 
                 <tbody> 
                     <tr ng-repeat="registro in registros"> 
-                        <td>{{registro.cd_musica}}</td> 
-                        <td>{{registro.st_nome}}</td> 
+                        <td>{{registro.cd_musica_artista}}</td> 
+                        <td>{{registro.musica.st_nome}}</td> 
+                        <td><a href="{{registro.st_link_cifra}}" target="_blank">{{registro.st_link_cifra}}</a></td> 
+                        <td>{{registro.st_tom}}</td> 
                         <td>
-                            <a href="/#/musica/editar/{{registro.cd_musica}}" title="Editar">
+                            <a href="/#/musica/editar/{{registro.cd_musica_artista}}" title="Editar">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
-                            <a href="/#/musica/add-info/{{registro.cd_musica}}" title="Adicionar informação">
+                            <a href="/#/musica/add-info/{{registro.cd_musica_artista}}" title="Adicionar informação">
                                 <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
                             </a>
                             <!--                        <a href="#" ng-click="delete(registro.cd_musica)">
