--- a/public/projetoangular/templates/setlist.html
+++ b/public/projetoangular/templates/setlist.html
@@ -2,8 +2,8 @@
 <div class="col-xs-12">
     <div class="panel panel-default" ng-init="load()">
         <div class="panel-heading">
-            <h3 class="panel-title">Músicas 
-                <a href="/#/musica/novo/" class="pull-right">
+            <h3 class="panel-title">Setlists 
+                <a href="/#/setlist/novo/" class="pull-right">
                     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                 </a>
             </h3>
@@ -13,28 +13,21 @@
                 <thead> 
                     <tr> 
                         <th>#</th> 
-                        <th>Música</th> 
-                        <th>Link para cifra</th> 
-                        <th>Tom</th> 
+                        <th>Nome</th> 
                         <th>Ação</th> 
                     </tr> 
                 </thead> 
                 <tbody> 
                     <tr ng-repeat="registro in registros"> 
-                        <td><a href="/#/musica/editar/{{registro.cd_musica_artista}}">{{registro.cd_musica_artista}}</a></td> 
-                        <td>{{registro.musica.st_nome}}</td> 
-                        <td><a href="{{registro.st_link_cifra}}" target="_blank">{{registro.st_link_cifra}}</a></td> 
-                        <td>{{registro.st_tom}}</td> 
+                        <td><a href="/#/setlist/editar/{{registro.cd_setlist}}">{{registro.cd_setlist}}</a></td> 
+                        <td>{{registro.st_nome}}</td> 
                         <td>
-                            <a href="/#/musica/editar/{{registro.cd_musica_artista}}" title="Editar">
+                            <a href="/#/setlist/editar/{{registro.cd_setlist}}" title="Editar">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
 <!--                            <a href="/#/musica/add-info/{{registro.cd_musica_artista}}" title="Adicionar informação">
                                 <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
                             </a>-->
-                            <!--                        <a href="#" ng-click="delete(registro.cd_musica)">
-                                                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                                                    </a>-->
                         </td> 
                     </tr> 
                 </tbody> 
