--- a/public/projetoangular/templates/setlist.html
+++ b/public/projetoangular/templates/setlist.html
@@ -25,9 +25,9 @@
                             <a href="/#/setlist/editar/{{registro.cd_setlist}}" title="Editar">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
-<!--                            <a href="/#/musica/add-info/{{registro.cd_musica_artista}}" title="Adicionar informação">
-                                <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
-                            </a>-->
+                            <a href="/#/setlist/musica/{{registro.cd_setlist}}" title="Gerenciar músicas">
+                                <span class="glyphicon glyphicon-music" aria-hidden="true"></span>
+                            </a>
                         </td> 
                     </tr> 
                 </tbody> 
