--- a/public/projetoangular/templates/musica.html
+++ b/public/projetoangular/templates/musica.html
@@ -9,6 +9,14 @@
             </h3>
         </div>
         <div class="panel-body">
+            <form class="navbar-form navbar-left" role="search">
+                <div class="input-group">
+                    <input type="text" class="form-control" ng-model="criterioDeBusca" placeholder="Nome">
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-search"></span>
+                    </span>
+                </div>
+            </form>
             <table class="table"> 
                 <thead> 
                     <tr> 
@@ -20,7 +28,7 @@
                     </tr> 
                 </thead> 
                 <tbody> 
-                    <tr ng-repeat="registro in registros"> 
+                    <tr ng-repeat="registro in registros| filter:criterioDeBusca"> 
                         <td><a href="/#/musica/editar/{{registro.cd_musica_artista}}">{{registro.cd_musica_artista}}</a></td> 
                         <td>{{registro.musica.st_nome}}</td> 
                         <td><a href="{{registro.st_link_cifra}}" target="_blank">{{registro.st_link_cifra}}</a></td> 
@@ -29,9 +37,9 @@
                             <a href="/#/musica/editar/{{registro.cd_musica_artista}}" title="Editar">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
-<!--                            <a href="/#/musica/add-info/{{registro.cd_musica_artista}}" title="Adicionar informação">
-                                <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
-                            </a>-->
+                            <!--                            <a href="/#/musica/add-info/{{registro.cd_musica_artista}}" title="Adicionar informação">
+                                                            <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+                                                        </a>-->
                             <!--                        <a href="#" ng-click="delete(registro.cd_musica)">
                                                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                                                     </a>-->
