--- a/public/projetoangular/templates/setlist.html
+++ b/public/projetoangular/templates/setlist.html
@@ -9,6 +9,14 @@
             </h3>
         </div>
         <div class="panel-body">
+            <form class="navbar-form navbar-left" role="search">
+                <div class="input-group">
+                    <input type="text" class="form-control" ng-model="criterioDeBusca" placeholder="Nome">
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-search"></span>
+                    </span>
+                </div>
+            </form>
             <table class="table"> 
                 <thead> 
                     <tr> 
@@ -18,7 +26,7 @@
                     </tr> 
                 </thead> 
                 <tbody> 
-                    <tr ng-repeat="registro in registros"> 
+                    <tr ng-repeat="registro in registros | filter:criterioDeBusca"> 
                         <td><a href="/#/setlist/editar/{{registro.cd_setlist}}">{{registro.cd_setlist}}</a></td> 
                         <td>{{registro.st_nome}}</td> 
                         <td>
