--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Setlist</title>
         <link href="/css/bootstrap.css" media="screen" rel="stylesheet" type="text/css">
+        <link href="/css/style.css" rel="stylesheet" type="text/css">
         <link href="/css/ui.css" media="screen" rel="stylesheet" type="text/css">
     </head>
     <body>
