--- a/public/projetoangular/templates/setlistmusica.html
+++ b/public/projetoangular/templates/setlistmusica.html
@@ -4,7 +4,7 @@
         <h1>Setlist: <small>{{item.st_nome}} - ({{slitens.length}}) músicas</small></h1>
     </div>
 </div>
-<div class="col-xs-12">
+<div class="col-xs-12 add-musica">
     <div class="panel panel-default">
         <div class="panel-heading">
             <h3 class="panel-title">Adicionar música
@@ -45,13 +45,17 @@
         </div>
     </div>
 </div>
-<div class="col-xs-12">
+<div class="col-xs-12 musicas-adicionadas">
     <div class="panel panel-default">
         <div class="panel-heading">
-            <h3 class="panel-title">Músicas adicionadas</h3>
+            <h3 class="panel-title">Músicas adicionadas
+                <a href="/#/setlist/print/{{item.cd_setlist}}" class="pull-right" title="Imprimir">
+                    <span class="glyphicon glyphicon-print" aria-hidden="true"></span>
+                </a>
+            </h3>
         </div>
         <div class="panel-body">
-            <table class="table"> 
+            <table class="table musicas-setlist"> 
                 <thead> 
                     <tr> 
                         <th>Música</th> 
