--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -2,6 +2,7 @@
 <html lang="en" ng-app="myApp">
     <head>
         <meta charset="utf-8">
+        <meta author="Marcio Satin">
         <title>Setlist</title>
         <link href="/css/bootstrap.css" media="screen" rel="stylesheet" type="text/css">
         <link href="/css/style.css" rel="stylesheet" type="text/css">
