Ordenando set list e artistas

--- a/public/projetoangular/templates/setlistmusica.html
+++ b/public/projetoangular/templates/setlistmusica.html
@@ -70,7 +70,7 @@
                         <td><a href="{{slitem.musicaartista.st_link_cifra}}" target="_blank">{{slitem.musicaartista.st_link_cifra}}</a></td> 
                         <td>{{slitem.musicaartista.st_tom}}</td> 
                         <td>
-                            <a href="#" ng-click="deleteSetlistItem(slitem.cd_setlist_item)" title="Excluir">
+                            <a href="javascript::" ng-click="deleteSetlistItem(slitem.cd_setlist_item)" title="Excluir">
                                 <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                             </a>
                         </td> 
