--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -27,7 +27,10 @@
     <div ng-hide="loading">
         <?php echo $this->content; ?>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="/js/angular.min.js"></script>
+    <script src="https://rawgithub.com/angular-ui/ui-sortable/master/src/sortable.js"></script>
     <script src="/js/angular-route.min.js"></script>
     <script src="/js/angular-resource.min.js"></script>
     <script src="/js/geral.js"></script>
