Melhoria no menu e crud de artistas

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -17,8 +17,8 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="/#/musica">Músicas</a></li>
-                        <!--<li><a href="/#/produtos">Produtos</a></li>-->
+                        <li><a href="/#/musica" rel="musica">Músicas</a></li>
+                        <li><a href="/#/artista" rel="artista">Artistas</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
@@ -37,6 +37,7 @@
     <script src="/projetoangular/app.js"></script>
     <script src="/projetoangular/controllers/musicaController.js"></script>
     <script src="/projetoangular/controllers/setlistController.js"></script>
+    <script src="/projetoangular/controllers/artistaController.js"></script>
     <script src="/projetoangular/services/artistaService.js"></script>
     <script src="/projetoangular/services/musicaService.js"></script>
     <script src="/projetoangular/services/generoService.js"></script>
