Adicionado link para artistas ao cadastra música

--- a/public/projetoangular/templates/editarmusica.html
+++ b/public/projetoangular/templates/editarmusica.html
@@ -15,7 +15,7 @@
                 <div class="form-group">
                     <div class="col-xs-12">
                         <label class="control-label">Artista
-                            <a href="#" title="Novo artista">
+                            <a href="/#/artista/novo" title="Novo artista">
                                 <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                             </a>
                         </label>
