Adicionado ordenacao e paginacao na grid

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -33,7 +33,9 @@
     <script src="https://rawgithub.com/angular-ui/ui-sortable/master/src/sortable.js"></script>
     <script src="/js/angular-route.min.js"></script>
     <script src="/js/angular-resource.min.js"></script>
+    <script src="/js/angular-table.min.js"></script>
     <script src="/js/geral.js"></script>
+    <script src="/js/dirPagination.js"></script>
     <script src="/projetoangular/app.js"></script>
     <script src="/projetoangular/controllers/musicaController.js"></script>
     <script src="/projetoangular/controllers/setlistController.js"></script>
