--- a/public/projetoangular/templates/novoartista.html
+++ b/public/projetoangular/templates/novoartista.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h3 class="panel-title">Novo artista <a href="/#/" class="pull-right">
+        <h3 class="panel-title">Novo artista <a href="/#/artista" class="pull-right">
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></a></h3>
     </div>
     <div class="panel-body">
